--- a/App/Properties/launchSettings.json
+++ b/App/Properties/launchSettings.json
@@ -2,26 +2,18 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost:8123",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:50560",
       "sslPort": 44332
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "App": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    "IIS": {
+      "commandName": "IIS"
     }
   }
 }
