--- a/Module1/Properties/launchSettings.json
+++ b/Module1/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost:8123/Module1",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:1060/module1",
       "sslPort": 44313
@@ -9,7 +13,7 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "IIS",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
