--- a/Module2/Properties/launchSettings.json
+++ b/Module2/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost:8123/Module2",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:61657/module2",
       "sslPort": 44329
@@ -9,7 +13,7 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "IIS",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
