Removed extra website and extra unused launchSettings.json entries.

--- a/App/Properties/launchSettings.json
+++ b/App/Properties/launchSettings.json
@@ -5,15 +5,12 @@
     "iis": {
       "applicationUrl": "http://localhost:8123",
       "sslPort": 0
-    },
-    "iisExpress": {
-      "applicationUrl": "http://localhost:50560",
-      "sslPort": 44332
     }
   },
   "profiles": {
     "IIS": {
-      "commandName": "IIS"
+      "commandName": "IIS",
+      "launchBrowser": true
     }
   }
 }
