--- a/Module1/Properties/launchSettings.json
+++ b/Module1/Properties/launchSettings.json
@@ -5,26 +5,11 @@
     "iis": {
       "applicationUrl": "http://localhost:8123/Module1",
       "sslPort": 0
-    },
-    "iisExpress": {
-      "applicationUrl": "http://localhost:1060/module1",
-      "sslPort": 44313
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IIS",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Module1": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    "IIS": {
+      "commandName": "IIS"
     }
   }
 }
