--- a/Module2/Properties/launchSettings.json
+++ b/Module2/Properties/launchSettings.json
@@ -5,26 +5,11 @@
     "iis": {
       "applicationUrl": "http://localhost:8123/Module2",
       "sslPort": 0
-    },
-    "iisExpress": {
-      "applicationUrl": "http://localhost:61657/module2",
-      "sslPort": 44329
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IIS",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Module2": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    "IIS": {
+      "commandName": "IIS"
     }
   }
 }
