--- a/Module3/Properties/launchSettings.json
+++ b/Module3/Properties/launchSettings.json
@@ -5,28 +5,11 @@
     "iis": {
       "applicationUrl": "http://localhost:8123/Module3",
       "sslPort": 0
-    },
-    "iisExpress": {
-      "applicationUrl": "http://localhost:24072/module3",
-      "sslPort": 44310
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IIS",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
-    },
-    "Module3": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
+    "IIS": {
+      "commandName": "IIS"
     }
   }
 }
