--- a/BlazorSS1/MfePoc.BlazorSS1.csproj
+++ b/BlazorSS1/MfePoc.BlazorSS1.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
 
 </Project>
