--- a/Dashboard/MfePoc.Dashboard.csproj
+++ b/Dashboard/MfePoc.Dashboard.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
 
 </Project>
