--- a/Home/MfePoc.Home.csproj
+++ b/Home/MfePoc.Home.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
 
 </Project>
