--- a/BlazorCS1/MfePoc.BlazorCS1.csproj
+++ b/BlazorCS1/MfePoc.BlazorCS1.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlazorCS1.Client\MfePoc.BlazorCS1.Client.csproj" />
     <ProjectReference Include="..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
 
