Updated initial setup script.

--- a/Home/MfePoc.Home.csproj
+++ b/Home/MfePoc.Home.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="setup_iis.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
