--- a/BlazorCS1/MfePoc.BlazorCS1.csproj
+++ b/BlazorCS1/MfePoc.BlazorCS1.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.0" />
+    <PackageReference Include="ZipDeploy" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
