Added https redirection, and disabled test discovery.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,3 +4,6 @@ build_script:
   - dotnet --info
   - dotnet --version
   - dotnet msbuild build.proj /t:Deploy
+
+test_script:
+  - ps: write-host $env:CONFIGURATION
