Simplified turning off tests, and updated blazor client-side header.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,5 +5,4 @@ build_script:
   - dotnet --version
   - dotnet msbuild build.proj /t:Deploy
 
-test_script:
-  - ps: write-host $env:CONFIGURATION
+test: off
