Renamed BlazorSS1 to Generation, and moved it into a modules folder.

--- a/Modules/Generation/Properties/launchSettings.json
+++ b/Modules/Generation/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iis": {
-      "applicationUrl": "http://localhost:8123/BlazorSS1",
+      "applicationUrl": "http://localhost:8123/Generation",
       "sslPort": 0
     }
   },
