Corrected path to unzip mixing service, and other minor references.

--- a/BlazorCS2.Client/Properties/launchSettings.json
+++ b/BlazorCS2.Client/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MfePoc.BlazorCS1": {
+    "MfePoc.BlazorCS2.Client": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
