--- a/Modules/Mixing/Client/Properties/launchSettings.json
+++ b/Modules/Mixing/Client/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MfePoc.BlazorCS1": {
+    "MfePoc.Mixing.Client": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
