Moved module into sub-folder for consistency.

--- a/Modules/Generation/Module/MfePoc.Generation.csproj
+++ b/Modules/Generation/Module/MfePoc.Generation.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\MfePoc.Shared.csproj" />
+    <ProjectReference Include="..\..\..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
 
 </Project>
