Added handler in Dashboard for when primary colour stock is updated.

--- a/Modules/Dashboard/Module/MfePoc.Dashboard.csproj
+++ b/Modules/Dashboard/Module/MfePoc.Dashboard.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\MfePoc.Shared.csproj" />
+    <ProjectReference Include="..\..\Generation\Contract\MfePoc.Generation.Contract.csproj" />
   </ItemGroup>
 
 </Project>
