Added OnServiceStarted event, so stock is updated when a new service starts up.

--- a/Modules/Mixing/Server/MfePoc.Mixing.Server.csproj
+++ b/Modules/Mixing/Server/MfePoc.Mixing.Server.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Generation\Contract\MfePoc.Generation.Contract.csproj" />
     <ProjectReference Include="..\Client\MfePoc.Mixing.Client.csproj" />
     <ProjectReference Include="..\..\..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
