Replaced hard-coded menu entries with configuration files in each module.

--- a/Modules/Dashboard/Module/MfePoc.Dashboard.csproj
+++ b/Modules/Dashboard/Module/MfePoc.Dashboard.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\..\Generation\Contract\MfePoc.Generation.Contract.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="module.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
