--- a/BlazorCS2/MfePoc.BlazorCS2.csproj
+++ b/BlazorCS2/MfePoc.BlazorCS2.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="module.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
