--- a/Modules/Generation/Module/MfePoc.Generation.csproj
+++ b/Modules/Generation/Module/MfePoc.Generation.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\Contract\MfePoc.Generation.Contract.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="module.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
