--- a/Modules/Mixing/Server/MfePoc.Mixing.Server.csproj
+++ b/Modules/Mixing/Server/MfePoc.Mixing.Server.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\..\..\Shared\MfePoc.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="module.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
