Added primary colours to mix screen.

--- a/Modules/Mixing/Client/MfePoc.Mixing.Client.csproj
+++ b/Modules/Mixing/Client/MfePoc.Mixing.Client.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Generation\Contract\MfePoc.Generation.Contract.csproj" />
+  </ItemGroup>
+
 </Project>
