Renamed BlazorSS2 module to Sales.

--- a/Modules/Sales/Module/Properties/launchSettings.json
+++ b/Modules/Sales/Module/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iis": {
-      "applicationUrl": "http://localhost:8123/BlazorSS2",
+      "applicationUrl": "http://localhost:8123/Sales",
       "sslPort": 0
     }
   },
