Renamed BlazorCS2 to Reporting module.

--- a/Modules/Reporting/Client/Properties/launchSettings.json
+++ b/Modules/Reporting/Client/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MfePoc.BlazorCS2.Client": {
+    "MfePoc.Reporting.Client": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
