--- a/Modules/Mixing/Server/MfePoc.Mixing.Server.csproj
+++ b/Modules/Mixing/Server/MfePoc.Mixing.Server.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\..\Generation\Contract\MfePoc.Generation.Contract.csproj" />
     <ProjectReference Include="..\Client\MfePoc.Mixing.Client.csproj" />
     <ProjectReference Include="..\..\..\Shared\MfePoc.Shared.csproj" />
+    <ProjectReference Include="..\Contract\MfePoc.Mixing.Contract.csproj" />
   </ItemGroup>
 
   <ItemGroup>
