--- a/Modules/Sales/Module/MfePoc.Sales.csproj
+++ b/Modules/Sales/Module/MfePoc.Sales.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\MfePoc.Shared.csproj" />
+    <ProjectReference Include="..\..\Mixing\Contract\MfePoc.Mixing.Contract.csproj" />
   </ItemGroup>
 
   <ItemGroup>
