Added OnSellExecuted event.

--- a/Modules/Sales/Module/MfePoc.Sales.csproj
+++ b/Modules/Sales/Module/MfePoc.Sales.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\MfePoc.Shared.csproj" />
     <ProjectReference Include="..\..\Mixing\Contract\MfePoc.Mixing.Contract.csproj" />
+    <ProjectReference Include="..\Contract\MfePoc.Sales.Contract.csproj" />
   </ItemGroup>
 
   <ItemGroup>
